--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
   </head>
   <body>
     <!-- Header -->
@@ -29,6 +30,34 @@
               <li><a href="#">Contact Us</a></li>
             </ul>
           </nav>
+
+          <div class="hamburger">
+            <div class="toggle-hamburger">
+              <svg
+                width="35"
+                height="35"
+                viewBox="0 0 35 35"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <g clip-path="url(#clip0_473_2841)">
+                  <path
+                    d="M17.5 35C7.85021 35 0 27.1498 0 17.5C0 7.85021 7.85021 0 17.5 0C27.1498 0 35 7.85021 35 17.5C35 27.1498 27.1498 35 17.5 35ZM17.5 1.45833C8.65521 1.45833 1.45833 8.65521 1.45833 17.5C1.45833 26.3448 8.65521 33.5417 17.5 33.5417C26.3448 33.5417 33.5417 26.3448 33.5417 17.5C33.5417 8.65521 26.3448 1.45833 17.5 1.45833Z"
+                    fill="black"
+                  />
+                  <path
+                    d="M24.0612 11.6673H10.9362C10.7428 11.6673 10.5573 11.5905 10.4206 11.4537C10.2839 11.317 10.207 11.1315 10.207 10.9382C10.207 10.7448 10.2839 10.5593 10.4206 10.4226C10.5573 10.2858 10.7428 10.209 10.9362 10.209H24.0612C24.2546 10.209 24.4401 10.2858 24.5768 10.4226C24.7135 10.5593 24.7904 10.7448 24.7904 10.9382C24.7904 11.1315 24.7135 11.317 24.5768 11.4537C24.4401 11.5905 24.2546 11.6673 24.0612 11.6673ZM24.0612 18.2298H10.9362C10.7428 18.2298 10.5573 18.153 10.4206 18.0163C10.2839 17.8795 10.207 17.694 10.207 17.5007C10.207 17.3073 10.2839 17.1218 10.4206 16.9851C10.5573 16.8483 10.7428 16.7715 10.9362 16.7715H24.0612C24.2546 16.7715 24.4401 16.8483 24.5768 16.9851C24.7135 17.1218 24.7904 17.3073 24.7904 17.5007C24.7904 17.694 24.7135 17.8795 24.5768 18.0163C24.4401 18.153 24.2546 18.2298 24.0612 18.2298ZM24.0612 24.7923H10.9362C10.7428 24.7923 10.5573 24.7155 10.4206 24.5788C10.2839 24.442 10.207 24.2565 10.207 24.0632C10.207 23.8698 10.2839 23.6843 10.4206 23.5476C10.5573 23.4108 10.7428 23.334 10.9362 23.334H24.0612C24.2546 23.334 24.4401 23.4108 24.5768 23.5476C24.7135 23.6843 24.7904 23.8698 24.7904 24.0632C24.7904 24.2565 24.7135 24.442 24.5768 24.5788C24.4401 24.7155 24.2546 24.7923 24.0612 24.7923Z"
+                    fill="black"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="clip0_473_2841">
+                    <rect width="35" height="35" fill="white" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </div>
+          </div>
         </div>
       </div>
     </header>
@@ -295,7 +324,7 @@
     <section class="why-choose-us p-top p-btm">
       <div class="main-container">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-xl-7">
             <div class="row">
               <div class="col-7">
                 <h2 class="heading">
@@ -335,7 +364,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-xl-5">
             <div class="overall-client">
               <div class="counter">
                 <strong>35+</strong>
@@ -455,58 +484,81 @@
         </div>
       </div>
 
-      <div class="serve-slider">
-        <div class="owl-carousel">
-          <div class="item">
-            <div class="s-box">
-              <img src="assets/images/we-serve-slider-one.png" alt="slider" />
-              <div class="bx-content">
-                <strong>FinTech</strong>
+      <div class="slider-wraper">
+        <div class="serve-slider">
+          <div class="owl-carousel">
+            <div class="item">
+              <div class="s-box">
+                <img src="assets/images/we-serve-slider-one.png" alt="slider" />
+                <div class="bx-content">
+                  <strong>FinTech</strong>
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="s-box">
+                <img src="assets/images/we-serve-slider-two.png" alt="slider" />
+                <div class="bx-content">
+                  <strong
+                    >Valet <br />
+                    Parking</strong
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="s-box">
+                <img
+                  src="assets/images/we-serve-slider-three.png"
+                  alt="slider"
+                />
+                <div class="bx-content">
+                  <strong>AI / ML</strong>
+                </div>
               </div>
             </div>
           </div>
 
-          <div class="item">
-            <div class="s-box">
-              <img src="assets/images/we-serve-slider-two.png" alt="slider" />
-              <div class="bx-content">
-                <strong
-                  >Valet <br />
-                  Parking</strong
+          <!-- Custom Navigation Buttons -->
+          <div class="wrap">
+            <div class="custom-nav">
+              <button class="customPrevBtn">
+                <svg
+                  width="27"
+                  height="15"
+                  viewBox="0 0 27 15"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                  style="transform: rotate(180deg)"
                 >
-              </div>
-            </div>
-          </div>
-
-          <div class="item">
-            <div class="s-box">
-              <img src="assets/images/we-serve-slider-three.png" alt="slider" />
-              <div class="bx-content">
-                <strong>AI / ML</strong>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <!-- Custom Navigation Buttons -->
-        <div class="wrap">
-          <div class="custom-nav">
-            <button class="customPrevBtn">
-              <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg" style="transform: rotate(180deg);">
-                <path d="M1.2408 8.29611H22.0167L18.1235 12.1849C17.006 13.3023 18.6822 14.983 19.7997 13.8656L23.3443 10.3165L25.7133 7.94746C25.9344 7.72546 26.0585 7.42491 26.0585 7.11159C26.0585 6.79828 25.9344 6.49773 25.7133 6.27573L19.7952 0.357632C19.6837 0.243227 19.5501 0.15257 19.4026 0.0911163C19.2551 0.029663 19.0968 -0.00131617 18.937 4.28521e-05C18.701 0.00066125 18.4706 0.0717486 18.2753 0.20419C18.08 0.33663 17.9287 0.524388 17.8408 0.743388C17.7529 0.962388 17.7324 1.20265 17.782 1.43336C17.8316 1.66407 17.9489 1.87472 18.119 2.0383L22.0212 5.92708H1.17823C-0.462213 6.01201 -0.341527 8.37656 1.2408 8.29611Z" fill="#5D5D5D"/>
+                  <path
+                    d="M1.2408 8.29611H22.0167L18.1235 12.1849C17.006 13.3023 18.6822 14.983 19.7997 13.8656L23.3443 10.3165L25.7133 7.94746C25.9344 7.72546 26.0585 7.42491 26.0585 7.11159C26.0585 6.79828 25.9344 6.49773 25.7133 6.27573L19.7952 0.357632C19.6837 0.243227 19.5501 0.15257 19.4026 0.0911163C19.2551 0.029663 19.0968 -0.00131617 18.937 4.28521e-05C18.701 0.00066125 18.4706 0.0717486 18.2753 0.20419C18.08 0.33663 17.9287 0.524388 17.8408 0.743388C17.7529 0.962388 17.7324 1.20265 17.782 1.43336C17.8316 1.66407 17.9489 1.87472 18.119 2.0383L22.0212 5.92708H1.17823C-0.462213 6.01201 -0.341527 8.37656 1.2408 8.29611Z"
+                    fill="#5D5D5D"
+                  />
                 </svg>
-                
-            </button>
-            <button class="customNextBtn">
-              <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1.2408 8.29611H22.0167L18.1235 12.1849C17.006 13.3023 18.6822 14.983 19.7997 13.8656L23.3443 10.3165L25.7133 7.94746C25.9344 7.72546 26.0585 7.42491 26.0585 7.11159C26.0585 6.79828 25.9344 6.49773 25.7133 6.27573L19.7952 0.357632C19.6837 0.243227 19.5501 0.15257 19.4026 0.0911163C19.2551 0.029663 19.0968 -0.00131617 18.937 4.28521e-05C18.701 0.00066125 18.4706 0.0717486 18.2753 0.20419C18.08 0.33663 17.9287 0.524388 17.8408 0.743388C17.7529 0.962388 17.7324 1.20265 17.782 1.43336C17.8316 1.66407 17.9489 1.87472 18.119 2.0383L22.0212 5.92708H1.17823C-0.462213 6.01201 -0.341527 8.37656 1.2408 8.29611Z" fill="#5D5D5D"/>
+              </button>
+              <button class="customNextBtn">
+                <svg
+                  width="27"
+                  height="15"
+                  viewBox="0 0 27 15"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M1.2408 8.29611H22.0167L18.1235 12.1849C17.006 13.3023 18.6822 14.983 19.7997 13.8656L23.3443 10.3165L25.7133 7.94746C25.9344 7.72546 26.0585 7.42491 26.0585 7.11159C26.0585 6.79828 25.9344 6.49773 25.7133 6.27573L19.7952 0.357632C19.6837 0.243227 19.5501 0.15257 19.4026 0.0911163C19.2551 0.029663 19.0968 -0.00131617 18.937 4.28521e-05C18.701 0.00066125 18.4706 0.0717486 18.2753 0.20419C18.08 0.33663 17.9287 0.524388 17.8408 0.743388C17.7529 0.962388 17.7324 1.20265 17.782 1.43336C17.8316 1.66407 17.9489 1.87472 18.119 2.0383L22.0212 5.92708H1.17823C-0.462213 6.01201 -0.341527 8.37656 1.2408 8.29611Z"
+                    fill="#5D5D5D"
+                  />
                 </svg>
-            </button>
-          </div>
+              </button>
+            </div>
 
-          <!-- Progress Bar -->
-          <div class="progress-bar-wrapper">
-            <div class="c-progress-bar"></div>
+            <!-- Progress Bar -->
+            <div class="progress-bar-wrapper">
+              <div class="c-progress-bar"></div>
+            </div>
           </div>
         </div>
       </div>
