--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     <section class="why-choose-us p-top p-btm">
       <div class="main-container">
         <div class="row">
-          <div class="col-xl-7">
+          <div class="col-lg-8 col-xl-7">
             <div class="row">
               <div class="col-7">
                 <h2 class="heading">
@@ -364,7 +364,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-5">
+          <div class="col-lg-4 col-xl-5">
             <div class="overall-client">
               <div class="counter">
                 <strong>35+</strong>
