--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         <div class="row">
           <div class="col-lg-8 col-xl-7">
             <div class="row">
-              <div class="col-7">
+              <div class="col-md-7">
                 <h2 class="heading">
                   Why <br />
                   Choose Us?
@@ -341,7 +341,7 @@
                   <span>Expert Teem Members</span>
                 </div>
               </div>
-              <div class="col-5">
+              <div class="col-md-5">
                 <div class="h-client">
                   <img src="assets/images/why-choose-team-two.png" alt="team" />
                   <span
@@ -441,7 +441,7 @@
             </div>
 
             <div class="row align-items-center">
-              <div class="col-8">
+              <div class="col-md-8 col-12">
                 <div class="apd">
                   <img src="assets/images/app-design-bg.png" alt="app" />
                   <span
@@ -450,7 +450,7 @@
                   >
                 </div>
               </div>
-              <div class="col-4">
+              <div class="col-md-4 col-12">
                 <div class="p-dne">
                   <img src="assets/images/p-dne.png" alt="pdone" />
                   <div>
