--- a/index.html
+++ b/index.html
@@ -565,6 +565,170 @@
     </section>
     <!-- We-serve-->
 
+    <!-- Case-studies-->
+    <section class="case-studies p-btm">
+      <div class="main-container">
+        <div class="row align-items-center">
+          <div class="col-5">
+            <a href="#" class="access-btn">
+              <span
+                ><svg
+                  width="20"
+                  height="28"
+                  viewBox="0 0 20 28"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M12.0594 1.06506C12.0596 0.834616 11.9851 0.610326 11.8469 0.425918C11.7087 0.241511 11.5143 0.106955 11.2931 0.042486C11.0718 -0.0219834 10.8356 -0.0128816 10.62 0.0684228C10.4044 0.149727 10.221 0.298839 10.0974 0.493335L0.166656 16.0988C0.064149 16.2597 0.00678291 16.4452 0.000565376 16.6358C-0.00565216 16.8265 0.0395073 17.0153 0.131315 17.1825C0.223122 17.3498 0.358201 17.4892 0.522407 17.5863C0.686614 17.6835 0.873908 17.7346 1.06468 17.7345H7.09405V26.6012C7.0933 26.8278 7.165 27.0487 7.29869 27.2317C7.43237 27.4146 7.62104 27.55 7.83715 27.6182C8.05326 27.6863 8.28549 27.6836 8.49993 27.6104C8.71437 27.5372 8.89979 27.3973 9.02912 27.2113L18.9599 13.0245C19.0725 12.8653 19.139 12.6782 19.1523 12.4837C19.1655 12.2892 19.1249 12.0948 19.0349 11.9218C18.9449 11.7488 18.809 11.604 18.6421 11.5032C18.4752 11.4024 18.2838 11.3496 18.0888 11.3505H12.0594V1.06506ZM9.9314 4.71957V12.4145C9.9314 13.0018 10.4081 13.4785 10.9954 13.4785H16.0459L9.22206 23.2262V16.6705C9.22206 16.3883 9.10996 16.1177 8.91042 15.9181C8.71088 15.7186 8.44025 15.6065 8.15806 15.6065H3.00259L9.9314 4.71957Z"
+                    fill="#3E3E3E"
+                  />
+                </svg>
+              </span>
+              Get Full Access</a
+            >
+          </div>
+          <div class="col-7">
+            <h3 class="subheading">Look Through Our Case Studies</h3>
+          </div>
+        </div>
+      </div>
+      <div class="case-s-slider-wraper">
+        <div class="case-studies-slider">
+          <div class="slider">
+            <div class="owl-carousel">
+              <div class="item">
+                <div class="slider-carousel">
+                  <img
+                    src="assets/images/case-studies-slider-one.png"
+                    alt="slider"
+                  />
+                  <div>
+                    <h4>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod
+                    </h4>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </p>
+                  </div>
+                  <a href="#" class="round-btn"> View </a>
+                </div>
+              </div>
+
+              <div class="item">
+                <div class="slider-carousel">
+                  <img
+                    src="assets/images/case-studies-slider-one.png"
+                    alt="slider"
+                  />
+                  <div>
+                    <h4>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod
+                    </h4>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </p>
+                  </div>
+                  <a href="#" class="round-btn"> View </a>
+                </div>
+              </div>
+
+              <div class="item">
+                <div class="slider-carousel">
+                  <img
+                    src="assets/images/case-studies-slider-one.png"
+                    alt="slider"
+                  />
+                  <div>
+                    <h4>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod
+                    </h4>
+                    <p>
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                      sed do eiusmod tempor incididunt ut labore et dolore magna
+                      aliqua.
+                    </p>
+                  </div>
+                  <a href="#" class="round-btn"> View </a>
+                </div>
+              </div>
+            </div>
+
+            <!-- Custom Navigation Buttons -->
+            <div class="wrap">
+              <div class="custom-nav">
+                <button class="customPrevBtn">
+                  <svg
+                    width="27"
+                    height="15"
+                    viewBox="0 0 27 15"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                    style="transform: rotate(180deg)"
+                  >
+                    <path
+                      d="M1.2408 8.29611H22.0167L18.1235 12.1849C17.006 13.3023 18.6822 14.983 19.7997 13.8656L23.3443 10.3165L25.7133 7.94746C25.9344 7.72546 26.0585 7.42491 26.0585 7.11159C26.0585 6.79828 25.9344 6.49773 25.7133 6.27573L19.7952 0.357632C19.6837 0.243227 19.5501 0.15257 19.4026 0.0911163C19.2551 0.029663 19.0968 -0.00131617 18.937 4.28521e-05C18.701 0.00066125 18.4706 0.0717486 18.2753 0.20419C18.08 0.33663 17.9287 0.524388 17.8408 0.743388C17.7529 0.962388 17.7324 1.20265 17.782 1.43336C17.8316 1.66407 17.9489 1.87472 18.119 2.0383L22.0212 5.92708H1.17823C-0.462213 6.01201 -0.341527 8.37656 1.2408 8.29611Z"
+                      fill="#5D5D5D"
+                    />
+                  </svg>
+                </button>
+                <button class="customNextBtn">
+                  <svg
+                    width="27"
+                    height="15"
+                    viewBox="0 0 27 15"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M1.2408 8.29611H22.0167L18.1235 12.1849C17.006 13.3023 18.6822 14.983 19.7997 13.8656L23.3443 10.3165L25.7133 7.94746C25.9344 7.72546 26.0585 7.42491 26.0585 7.11159C26.0585 6.79828 25.9344 6.49773 25.7133 6.27573L19.7952 0.357632C19.6837 0.243227 19.5501 0.15257 19.4026 0.0911163C19.2551 0.029663 19.0968 -0.00131617 18.937 4.28521e-05C18.701 0.00066125 18.4706 0.0717486 18.2753 0.20419C18.08 0.33663 17.9287 0.524388 17.8408 0.743388C17.7529 0.962388 17.7324 1.20265 17.782 1.43336C17.8316 1.66407 17.9489 1.87472 18.119 2.0383L22.0212 5.92708H1.17823C-0.462213 6.01201 -0.341527 8.37656 1.2408 8.29611Z"
+                      fill="#5D5D5D"
+                    />
+                  </svg>
+                </button>
+              </div>
+
+              <!-- Progress Bar -->
+              <div class="progress-bar-wrapper">
+                <div class="c-progress-bar"></div>
+              </div>
+            </div>
+            <!-- Custom Navigation Buttons -->
+          </div>
+          <div class="slider-card">
+            <div class="slider-card-wrap">
+              <div class="bx">
+
+              </div>
+
+              <div class="bx">
+
+              </div>
+
+              <div class="bx">
+
+              </div>
+
+              <div class="bx">
+
+              </div>
+            </div>
+            
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Case-studies-->
+
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js.map"></script>
