--- a/index.html
+++ b/index.html
@@ -705,24 +705,114 @@
             <!-- Custom Navigation Buttons -->
           </div>
           <div class="slider-card">
-            <div class="slider-card-wrap">
+
+            <div class="owl-carousel owl-theme" id="casestudiesTwo">
+            <div class="items">
               <div class="bx">
-
-              </div>
-
-              <div class="bx">
-
-              </div>
-
-              <div class="bx">
-
-              </div>
-
-              <div class="bx">
-
+                <img
+                  src="assets/images/case-studies-one.png"
+                  alt="case-studies"
+                />
+                <div>
+                  <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                  <a href="#">
+                    <svg
+                      width="19"
+                      height="11"
+                      viewBox="0 0 19 11"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M1.63395 6.05616H16.1486L13.4287 8.77298C12.648 9.55368 13.819 10.7278 14.5997 9.94715L17.0761 7.46766L18.7312 5.81259C18.8856 5.65749 18.9724 5.44752 18.9724 5.22863C18.9724 5.00974 18.8856 4.79976 18.7312 4.64467L14.5966 0.510106C14.5187 0.43018 14.4254 0.366844 14.3224 0.323911C14.2193 0.280977 14.1087 0.259334 13.997 0.260284C13.8322 0.260716 13.6712 0.31038 13.5348 0.402907C13.3983 0.495434 13.2926 0.626607 13.2312 0.779607C13.1698 0.932607 13.1555 1.10046 13.1901 1.26164C13.2248 1.42283 13.3067 1.56999 13.4256 1.68427L16.1518 4.40109H1.59023C0.444174 4.46042 0.528489 6.11237 1.63395 6.05616Z"
+                        fill="black"
+                      />
+                    </svg>
+                  </a>
+                </div>
               </div>
             </div>
-            
+
+            <div class="items">
+              <div class="bx">
+                <img
+                  src="assets/images/case-studies-one.png"
+                  alt="case-studies"
+                />
+                <div>
+                  <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                  <a href="#">
+                    <svg
+                      width="19"
+                      height="11"
+                      viewBox="0 0 19 11"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M1.63395 6.05616H16.1486L13.4287 8.77298C12.648 9.55368 13.819 10.7278 14.5997 9.94715L17.0761 7.46766L18.7312 5.81259C18.8856 5.65749 18.9724 5.44752 18.9724 5.22863C18.9724 5.00974 18.8856 4.79976 18.7312 4.64467L14.5966 0.510106C14.5187 0.43018 14.4254 0.366844 14.3224 0.323911C14.2193 0.280977 14.1087 0.259334 13.997 0.260284C13.8322 0.260716 13.6712 0.31038 13.5348 0.402907C13.3983 0.495434 13.2926 0.626607 13.2312 0.779607C13.1698 0.932607 13.1555 1.10046 13.1901 1.26164C13.2248 1.42283 13.3067 1.56999 13.4256 1.68427L16.1518 4.40109H1.59023C0.444174 4.46042 0.528489 6.11237 1.63395 6.05616Z"
+                        fill="black"
+                      />
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="items">
+              <div class="bx">
+                <img
+                  src="assets/images/case-studies-one.png"
+                  alt="case-studies"
+                />
+                <div>
+                  <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                  <a href="#">
+                    <svg
+                      width="19"
+                      height="11"
+                      viewBox="0 0 19 11"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M1.63395 6.05616H16.1486L13.4287 8.77298C12.648 9.55368 13.819 10.7278 14.5997 9.94715L17.0761 7.46766L18.7312 5.81259C18.8856 5.65749 18.9724 5.44752 18.9724 5.22863C18.9724 5.00974 18.8856 4.79976 18.7312 4.64467L14.5966 0.510106C14.5187 0.43018 14.4254 0.366844 14.3224 0.323911C14.2193 0.280977 14.1087 0.259334 13.997 0.260284C13.8322 0.260716 13.6712 0.31038 13.5348 0.402907C13.3983 0.495434 13.2926 0.626607 13.2312 0.779607C13.1698 0.932607 13.1555 1.10046 13.1901 1.26164C13.2248 1.42283 13.3067 1.56999 13.4256 1.68427L16.1518 4.40109H1.59023C0.444174 4.46042 0.528489 6.11237 1.63395 6.05616Z"
+                        fill="black"
+                      />
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="items">
+              <div class="bx">
+                <img
+                  src="assets/images/case-studies-one.png"
+                  alt="case-studies"
+                />
+                <div>
+                  <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                  <a href="#">
+                    <svg
+                      width="19"
+                      height="11"
+                      viewBox="0 0 19 11"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M1.63395 6.05616H16.1486L13.4287 8.77298C12.648 9.55368 13.819 10.7278 14.5997 9.94715L17.0761 7.46766L18.7312 5.81259C18.8856 5.65749 18.9724 5.44752 18.9724 5.22863C18.9724 5.00974 18.8856 4.79976 18.7312 4.64467L14.5966 0.510106C14.5187 0.43018 14.4254 0.366844 14.3224 0.323911C14.2193 0.280977 14.1087 0.259334 13.997 0.260284C13.8322 0.260716 13.6712 0.31038 13.5348 0.402907C13.3983 0.495434 13.2926 0.626607 13.2312 0.779607C13.1698 0.932607 13.1555 1.10046 13.1901 1.26164C13.2248 1.42283 13.3067 1.56999 13.4256 1.68427L16.1518 4.40109H1.59023C0.444174 4.46042 0.528489 6.11237 1.63395 6.05616Z"
+                        fill="black"
+                      />
+                    </svg>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
           </div>
         </div>
       </div>
