--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
     <section class="case-studies p-btm">
       <div class="main-container">
         <div class="row align-items-center">
-          <div class="col-5">
+          <div class="col-6">
             <a href="#" class="access-btn">
               <span
                 ><svg
@@ -590,7 +590,7 @@
               Get Full Access</a
             >
           </div>
-          <div class="col-7">
+          <div class="col-6">
             <h3 class="subheading">Look Through Our Case Studies</h3>
           </div>
         </div>
@@ -598,7 +598,7 @@
       <div class="case-s-slider-wraper">
         <div class="case-studies-slider">
           <div class="slider">
-            <div class="owl-carousel">
+            <div class="owl-carousel" id="caseSsliderone">
               <div class="item">
                 <div class="slider-carousel">
                   <img
