--- a/index.html
+++ b/index.html
@@ -661,6 +661,7 @@
                   <a href="#" class="round-btn"> View </a>
                 </div>
               </div>
+
             </div>
 
             <!-- Custom Navigation Buttons -->
@@ -812,16 +813,23 @@
             </div>
           </div>
 
+        <div class="content">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 
+          <a href="#">Explore Details   <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1.2408 8.29611H22.0167L18.1235 12.1849C17.006 13.3023 18.6822 14.983 19.7997 13.8656L23.3443 10.3165L25.7133 7.94746C25.9344 7.72546 26.0585 7.42491 26.0585 7.11159C26.0585 6.79828 25.9344 6.49773 25.7133 6.27573L19.7952 0.357632C19.6837 0.243227 19.5501 0.15257 19.4026 0.0911163C19.2551 0.029663 19.0968 -0.00131617 18.937 4.28521e-05C18.701 0.00066125 18.4706 0.0717486 18.2753 0.20419C18.08 0.33663 17.9287 0.524388 17.8408 0.743388C17.7529 0.962388 17.7324 1.20265 17.782 1.43336C17.8316 1.66407 17.9489 1.87472 18.119 2.0383L22.0212 5.92708H1.17823C-0.462213 6.01201 -0.341527 8.37656 1.2408 8.29611Z" fill="black"/>
+            </svg>
+            </a>
+        </div>
           </div>
         </div>
       </div>
     </section>
     <!-- Case-studies-->
 
-    <script src="assets/js/jquery-3.7.1.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js.map"></script>
     <script src="assets/js/custom.js"></script>
   </body>
 </html>
