--- a/index.html
+++ b/index.html
@@ -827,6 +827,16 @@
     </section>
     <!-- Case-studies-->
 
+    <!-- Contact-us-->
+  <section class="contact-us p-btm">
+ <div class="main-container">
+  <h2>CONTACT US</h2>
+
+  
+ </div>
+  </section>
+    <!-- Contact-us-->
+
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
