--- a/index.html
+++ b/index.html
@@ -661,7 +661,6 @@
                   <a href="#" class="round-btn"> View </a>
                 </div>
               </div>
-
             </div>
 
             <!-- Custom Navigation Buttons -->
@@ -706,121 +705,138 @@
             <!-- Custom Navigation Buttons -->
           </div>
           <div class="slider-card">
-
             <div class="owl-carousel owl-theme" id="casestudiesTwo">
-            <div class="items">
-              <div class="bx">
-                <img
-                  src="assets/images/case-studies-one.png"
-                  alt="case-studies"
-                />
-                <div>
-                  <p>Lorem ipsum dolor sit amet, consectetur.</p>
-                  <a href="#">
-                    <svg
-                      width="19"
-                      height="11"
-                      viewBox="0 0 19 11"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        d="M1.63395 6.05616H16.1486L13.4287 8.77298C12.648 9.55368 13.819 10.7278 14.5997 9.94715L17.0761 7.46766L18.7312 5.81259C18.8856 5.65749 18.9724 5.44752 18.9724 5.22863C18.9724 5.00974 18.8856 4.79976 18.7312 4.64467L14.5966 0.510106C14.5187 0.43018 14.4254 0.366844 14.3224 0.323911C14.2193 0.280977 14.1087 0.259334 13.997 0.260284C13.8322 0.260716 13.6712 0.31038 13.5348 0.402907C13.3983 0.495434 13.2926 0.626607 13.2312 0.779607C13.1698 0.932607 13.1555 1.10046 13.1901 1.26164C13.2248 1.42283 13.3067 1.56999 13.4256 1.68427L16.1518 4.40109H1.59023C0.444174 4.46042 0.528489 6.11237 1.63395 6.05616Z"
-                        fill="black"
-                      />
-                    </svg>
-                  </a>
+              <div class="items">
+                <div class="bx">
+                  <img
+                    src="assets/images/case-studies-one.png"
+                    alt="case-studies"
+                  />
+                  <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                    <a href="#">
+                      <svg
+                        width="19"
+                        height="11"
+                        viewBox="0 0 19 11"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M1.63395 6.05616H16.1486L13.4287 8.77298C12.648 9.55368 13.819 10.7278 14.5997 9.94715L17.0761 7.46766L18.7312 5.81259C18.8856 5.65749 18.9724 5.44752 18.9724 5.22863C18.9724 5.00974 18.8856 4.79976 18.7312 4.64467L14.5966 0.510106C14.5187 0.43018 14.4254 0.366844 14.3224 0.323911C14.2193 0.280977 14.1087 0.259334 13.997 0.260284C13.8322 0.260716 13.6712 0.31038 13.5348 0.402907C13.3983 0.495434 13.2926 0.626607 13.2312 0.779607C13.1698 0.932607 13.1555 1.10046 13.1901 1.26164C13.2248 1.42283 13.3067 1.56999 13.4256 1.68427L16.1518 4.40109H1.59023C0.444174 4.46042 0.528489 6.11237 1.63395 6.05616Z"
+                          fill="black"
+                        />
+                      </svg>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="items">
+                <div class="bx">
+                  <img
+                    src="assets/images/case-studies-one.png"
+                    alt="case-studies"
+                  />
+                  <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                    <a href="#">
+                      <svg
+                        width="19"
+                        height="11"
+                        viewBox="0 0 19 11"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M1.63395 6.05616H16.1486L13.4287 8.77298C12.648 9.55368 13.819 10.7278 14.5997 9.94715L17.0761 7.46766L18.7312 5.81259C18.8856 5.65749 18.9724 5.44752 18.9724 5.22863C18.9724 5.00974 18.8856 4.79976 18.7312 4.64467L14.5966 0.510106C14.5187 0.43018 14.4254 0.366844 14.3224 0.323911C14.2193 0.280977 14.1087 0.259334 13.997 0.260284C13.8322 0.260716 13.6712 0.31038 13.5348 0.402907C13.3983 0.495434 13.2926 0.626607 13.2312 0.779607C13.1698 0.932607 13.1555 1.10046 13.1901 1.26164C13.2248 1.42283 13.3067 1.56999 13.4256 1.68427L16.1518 4.40109H1.59023C0.444174 4.46042 0.528489 6.11237 1.63395 6.05616Z"
+                          fill="black"
+                        />
+                      </svg>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="items">
+                <div class="bx">
+                  <img
+                    src="assets/images/case-studies-one.png"
+                    alt="case-studies"
+                  />
+                  <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                    <a href="#">
+                      <svg
+                        width="19"
+                        height="11"
+                        viewBox="0 0 19 11"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M1.63395 6.05616H16.1486L13.4287 8.77298C12.648 9.55368 13.819 10.7278 14.5997 9.94715L17.0761 7.46766L18.7312 5.81259C18.8856 5.65749 18.9724 5.44752 18.9724 5.22863C18.9724 5.00974 18.8856 4.79976 18.7312 4.64467L14.5966 0.510106C14.5187 0.43018 14.4254 0.366844 14.3224 0.323911C14.2193 0.280977 14.1087 0.259334 13.997 0.260284C13.8322 0.260716 13.6712 0.31038 13.5348 0.402907C13.3983 0.495434 13.2926 0.626607 13.2312 0.779607C13.1698 0.932607 13.1555 1.10046 13.1901 1.26164C13.2248 1.42283 13.3067 1.56999 13.4256 1.68427L16.1518 4.40109H1.59023C0.444174 4.46042 0.528489 6.11237 1.63395 6.05616Z"
+                          fill="black"
+                        />
+                      </svg>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="items">
+                <div class="bx">
+                  <img
+                    src="assets/images/case-studies-one.png"
+                    alt="case-studies"
+                  />
+                  <div>
+                    <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                    <a href="#">
+                      <svg
+                        width="19"
+                        height="11"
+                        viewBox="0 0 19 11"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M1.63395 6.05616H16.1486L13.4287 8.77298C12.648 9.55368 13.819 10.7278 14.5997 9.94715L17.0761 7.46766L18.7312 5.81259C18.8856 5.65749 18.9724 5.44752 18.9724 5.22863C18.9724 5.00974 18.8856 4.79976 18.7312 4.64467L14.5966 0.510106C14.5187 0.43018 14.4254 0.366844 14.3224 0.323911C14.2193 0.280977 14.1087 0.259334 13.997 0.260284C13.8322 0.260716 13.6712 0.31038 13.5348 0.402907C13.3983 0.495434 13.2926 0.626607 13.2312 0.779607C13.1698 0.932607 13.1555 1.10046 13.1901 1.26164C13.2248 1.42283 13.3067 1.56999 13.4256 1.68427L16.1518 4.40109H1.59023C0.444174 4.46042 0.528489 6.11237 1.63395 6.05616Z"
+                          fill="black"
+                        />
+                      </svg>
+                    </a>
+                  </div>
                 </div>
               </div>
             </div>
 
-            <div class="items">
-              <div class="bx">
-                <img
-                  src="assets/images/case-studies-one.png"
-                  alt="case-studies"
-                />
-                <div>
-                  <p>Lorem ipsum dolor sit amet, consectetur.</p>
-                  <a href="#">
-                    <svg
-                      width="19"
-                      height="11"
-                      viewBox="0 0 19 11"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        d="M1.63395 6.05616H16.1486L13.4287 8.77298C12.648 9.55368 13.819 10.7278 14.5997 9.94715L17.0761 7.46766L18.7312 5.81259C18.8856 5.65749 18.9724 5.44752 18.9724 5.22863C18.9724 5.00974 18.8856 4.79976 18.7312 4.64467L14.5966 0.510106C14.5187 0.43018 14.4254 0.366844 14.3224 0.323911C14.2193 0.280977 14.1087 0.259334 13.997 0.260284C13.8322 0.260716 13.6712 0.31038 13.5348 0.402907C13.3983 0.495434 13.2926 0.626607 13.2312 0.779607C13.1698 0.932607 13.1555 1.10046 13.1901 1.26164C13.2248 1.42283 13.3067 1.56999 13.4256 1.68427L16.1518 4.40109H1.59023C0.444174 4.46042 0.528489 6.11237 1.63395 6.05616Z"
-                        fill="black"
-                      />
-                    </svg>
-                  </a>
-                </div>
-              </div>
+            <div class="content">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur.
+              </p>
+
+              <a href="#"
+                >Explore Details
+                <svg
+                  width="27"
+                  height="15"
+                  viewBox="0 0 27 15"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M1.2408 8.29611H22.0167L18.1235 12.1849C17.006 13.3023 18.6822 14.983 19.7997 13.8656L23.3443 10.3165L25.7133 7.94746C25.9344 7.72546 26.0585 7.42491 26.0585 7.11159C26.0585 6.79828 25.9344 6.49773 25.7133 6.27573L19.7952 0.357632C19.6837 0.243227 19.5501 0.15257 19.4026 0.0911163C19.2551 0.029663 19.0968 -0.00131617 18.937 4.28521e-05C18.701 0.00066125 18.4706 0.0717486 18.2753 0.20419C18.08 0.33663 17.9287 0.524388 17.8408 0.743388C17.7529 0.962388 17.7324 1.20265 17.782 1.43336C17.8316 1.66407 17.9489 1.87472 18.119 2.0383L22.0212 5.92708H1.17823C-0.462213 6.01201 -0.341527 8.37656 1.2408 8.29611Z"
+                    fill="black"
+                  />
+                </svg>
+              </a>
             </div>
-
-            <div class="items">
-              <div class="bx">
-                <img
-                  src="assets/images/case-studies-one.png"
-                  alt="case-studies"
-                />
-                <div>
-                  <p>Lorem ipsum dolor sit amet, consectetur.</p>
-                  <a href="#">
-                    <svg
-                      width="19"
-                      height="11"
-                      viewBox="0 0 19 11"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        d="M1.63395 6.05616H16.1486L13.4287 8.77298C12.648 9.55368 13.819 10.7278 14.5997 9.94715L17.0761 7.46766L18.7312 5.81259C18.8856 5.65749 18.9724 5.44752 18.9724 5.22863C18.9724 5.00974 18.8856 4.79976 18.7312 4.64467L14.5966 0.510106C14.5187 0.43018 14.4254 0.366844 14.3224 0.323911C14.2193 0.280977 14.1087 0.259334 13.997 0.260284C13.8322 0.260716 13.6712 0.31038 13.5348 0.402907C13.3983 0.495434 13.2926 0.626607 13.2312 0.779607C13.1698 0.932607 13.1555 1.10046 13.1901 1.26164C13.2248 1.42283 13.3067 1.56999 13.4256 1.68427L16.1518 4.40109H1.59023C0.444174 4.46042 0.528489 6.11237 1.63395 6.05616Z"
-                        fill="black"
-                      />
-                    </svg>
-                  </a>
-                </div>
-              </div>
-            </div>
-
-            <div class="items">
-              <div class="bx">
-                <img
-                  src="assets/images/case-studies-one.png"
-                  alt="case-studies"
-                />
-                <div>
-                  <p>Lorem ipsum dolor sit amet, consectetur.</p>
-                  <a href="#">
-                    <svg
-                      width="19"
-                      height="11"
-                      viewBox="0 0 19 11"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        d="M1.63395 6.05616H16.1486L13.4287 8.77298C12.648 9.55368 13.819 10.7278 14.5997 9.94715L17.0761 7.46766L18.7312 5.81259C18.8856 5.65749 18.9724 5.44752 18.9724 5.22863C18.9724 5.00974 18.8856 4.79976 18.7312 4.64467L14.5966 0.510106C14.5187 0.43018 14.4254 0.366844 14.3224 0.323911C14.2193 0.280977 14.1087 0.259334 13.997 0.260284C13.8322 0.260716 13.6712 0.31038 13.5348 0.402907C13.3983 0.495434 13.2926 0.626607 13.2312 0.779607C13.1698 0.932607 13.1555 1.10046 13.1901 1.26164C13.2248 1.42283 13.3067 1.56999 13.4256 1.68427L16.1518 4.40109H1.59023C0.444174 4.46042 0.528489 6.11237 1.63395 6.05616Z"
-                        fill="black"
-                      />
-                    </svg>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        <div class="content">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-
-          <a href="#">Explore Details   <svg width="27" height="15" viewBox="0 0 27 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M1.2408 8.29611H22.0167L18.1235 12.1849C17.006 13.3023 18.6822 14.983 19.7997 13.8656L23.3443 10.3165L25.7133 7.94746C25.9344 7.72546 26.0585 7.42491 26.0585 7.11159C26.0585 6.79828 25.9344 6.49773 25.7133 6.27573L19.7952 0.357632C19.6837 0.243227 19.5501 0.15257 19.4026 0.0911163C19.2551 0.029663 19.0968 -0.00131617 18.937 4.28521e-05C18.701 0.00066125 18.4706 0.0717486 18.2753 0.20419C18.08 0.33663 17.9287 0.524388 17.8408 0.743388C17.7529 0.962388 17.7324 1.20265 17.782 1.43336C17.8316 1.66407 17.9489 1.87472 18.119 2.0383L22.0212 5.92708H1.17823C-0.462213 6.01201 -0.341527 8.37656 1.2408 8.29611Z" fill="black"/>
-            </svg>
-            </a>
-        </div>
           </div>
         </div>
       </div>
@@ -828,13 +844,50 @@
     <!-- Case-studies-->
 
     <!-- Contact-us-->
-  <section class="contact-us p-btm">
- <div class="main-container">
-  <h2>CONTACT US</h2>
+    <section class="contact-us p-btm">
+      <div class="main-container">
+        <h2>CONTACT US</h2>
 
-  
- </div>
-  </section>
+        <form class="row">
+          <div class="col-9">
+            <div class="row gy-4">
+              <div class="col-4">
+                <input type="text" class="form-control" placeholder="Name" />
+              </div>
+              <div class="col-4">
+                <input type="email" class="form-control" placeholder="Email" />
+              </div>
+              <div class="col-4">
+                <input type="text" class="form-control" placeholder="Subject" />
+              </div>
+
+              <div class="col-12">
+                <textarea class="form-control" placeholder="Massage"></textarea>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="submit-btn">
+              <button class="submit">
+                <svg
+                  width="33"
+                  height="33"
+                  viewBox="0 0 33 33"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M31.0247 1.17968C30.5082 0.661913 29.8601 0.295021 29.1503 0.118598C28.4406 -0.0578257 27.6961 -0.0370817 26.9973 0.178591L2.833 7.61198C1.16452 8.11828 0.0598629 9.57965 0.00232894 11.3172C-0.0552051 13.0547 0.957393 14.5851 2.57985 15.2065L6.80285 16.8289L6.12395 22.2256C6.06216 22.7107 6.10444 23.2035 6.24796 23.671C6.39148 24.1385 6.63295 24.57 6.95629 24.9369C7.27963 25.3038 7.67742 25.5976 8.12318 25.7987C8.56894 25.9999 9.05243 26.1037 9.54147 26.1034C9.69106 26.1034 9.82914 26.1034 9.97873 26.0804L15.3754 25.4015L16.9979 29.6245C17.6077 31.2009 19.0576 32.202 20.7376 32.202H20.8872C22.6247 32.1445 24.0746 31.0283 24.5924 29.3713L32.0258 5.19556C32.2414 4.49673 32.2622 3.75228 32.0857 3.04253C31.9093 2.33278 31.5424 1.68469 31.0247 1.16818V1.17968ZM9.69106 23.8021C9.33434 23.8481 8.98914 23.7215 8.73599 23.4684C8.48284 23.2152 8.36777 22.87 8.40229 22.5133L9.00065 17.6804L12.982 19.2108L14.5124 23.1922L9.67955 23.7905L9.69106 23.8021ZM29.828 4.52816L22.3946 28.704C22.1299 29.567 21.405 29.9007 20.8066 29.9122C20.2313 29.9237 19.4718 29.659 19.1496 28.8075L15.2258 18.601L20.3694 13.4574C20.4759 13.3509 20.5604 13.2244 20.6181 13.0852C20.6757 12.9461 20.7054 12.7969 20.7054 12.6462C20.7054 12.4956 20.6757 12.3464 20.6181 12.2072C20.5604 12.068 20.4759 11.9415 20.3694 11.835C20.2628 11.7284 20.1364 11.6439 19.9972 11.5863C19.858 11.5286 19.7088 11.499 19.5581 11.499C19.4075 11.499 19.2583 11.5286 19.1191 11.5863C18.9799 11.6439 18.8534 11.7284 18.7469 11.835L13.6034 16.9785L3.40834 13.0547C2.56835 12.7325 2.29218 11.9846 2.30369 11.3977C2.3152 10.8109 2.64889 10.0744 3.5119 9.80978L27.6877 2.37639C28.3091 2.18077 28.9534 2.34187 29.4137 2.80214C29.874 3.26241 30.0351 3.90679 29.8395 4.51665L29.828 4.52816Z"
+                    fill="white"
+                  />
+                </svg>
+                Send
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </section>
     <!-- Contact-us-->
 
     <script src="assets/js/jquery.min.js"></script>
