--- a/index.html
+++ b/index.html
@@ -568,8 +568,8 @@
     <!-- Case-studies-->
     <section class="case-studies p-btm">
       <div class="main-container">
-        <div class="row align-items-center">
-          <div class="col-6">
+        <div class="row text-center text-sm-start align-items-center">
+          <div class="col-sm-6">
             <a href="#" class="access-btn">
               <span
                 ><svg
@@ -590,7 +590,7 @@
               Get Full Access</a
             >
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <h3 class="subheading">Look Through Our Case Studies</h3>
           </div>
         </div>
