--- a/index.html
+++ b/index.html
@@ -849,15 +849,15 @@
         <h2>CONTACT US</h2>
 
         <form class="row">
-          <div class="col-9">
+          <div class="col-md-8 col-lg-9">
             <div class="row gy-4">
-              <div class="col-4">
+              <div class="col-12 col-sm-4">
                 <input type="text" class="form-control" placeholder="Name" />
               </div>
-              <div class="col-4">
+              <div class="col-12 col-sm-4">
                 <input type="email" class="form-control" placeholder="Email" />
               </div>
-              <div class="col-4">
+              <div class="col-12 col-sm-4">
                 <input type="text" class="form-control" placeholder="Subject" />
               </div>
 
@@ -866,7 +866,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3">
+          <div class="col-md-4 col-lg-3">
             <div class="submit-btn">
               <button class="submit">
                 <svg
